# mem_gen

./: README.md  pyproject.toml
config/: mem_config.json  vendor_port_map.json
demo/: README.md  vendor_model_gen.py
doc/: architecture.md  bypass_wrapper_design.md  mask_expansion_design.md  memory_types_spec.md  memory_wrapper_design.md  physical_wrapper_design.md  quickstart.md  tb_gen_design.md  user_manual.md
scripts/: bypass_wrapper_gen.py  config_io.py  ecc_calculator.py  mem_gen.py  memory_wrapper_gen.py  physical_wrapper_gen.py  secded_gen.py  tb_gen.py  tb_verilog.py  vendor_model_gen.py  verilog_utils.py
scripts/std/: data_syncn.v  std_dffe.v
scripts/templates/: _macros.v.j2  bypass_wrapper.v.j2  memory_wrapper.v.j2  physical_wrapper.v.j2  tb.v.j2
scripts/tests/: conftest.py  helpers.py  test_bypass_wrapper_gen.py  test_config_io.py  test_memory_wrapper_gen.py  test_physical_wrapper_gen.py  test_tb_gen.py
