[project]
name = "sram-mem-gen"
version = "0.1.0"
description = "SRAM memory wrapper Verilog generator"
requires-python = ">=3.11"
dependencies = [
    "hjson>=3.1.0",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["scripts", "scripts/tests"]
testpaths = ["scripts/tests"]
